# app.js
@@ -19,6 +19,8 @@ const {
   courier,
   product,
   customer,
+  order,
+  orderItem,
 } = require('./controllers');
 
 const init = async () => {
@@ -45,6 +47,8 @@ app.use('/restaurant', restaurant);
 app.use('/courier', courier);
 app.use('/product', product);
 app.use('/customer', customer);
+app.use('/order', order);
+app.use('/order-item', orderItem);
 app.use('*', notFoundMiddleware);
 app.use(errorMiddleware);
 
