# controllers/index.js
@@ -6,4 +6,6 @@ module.exports = {
   ...require('./courier.controller'),
   ...require('./product.controller'),
   ...require('./customer.controller'),
+  ...require('./order.controller'),
+  ...require('./order-item.controller'),
 };
