# validators/index.js
@@ -6,4 +6,6 @@ module.exports = {
   ...require('./courier.validator'),
   ...require('./product.validator'),
   ...require('./customer.validator'),
+  ...require('./order.validator'),
+  ...require('./order-item.validator'),
 };
